Fixed horizontal scroll issue

--- a/src/components/HomePageComponents/HomePageHead/HomePageHead.module.scss
+++ b/src/components/HomePageComponents/HomePageHead/HomePageHead.module.scss
@@ -5,7 +5,6 @@
     justify-content: center;
     gap: 50px;
     height: 600px;
-    overflow: hidden;
 }
 
 .text_block {
@@ -155,7 +154,6 @@
         flex-direction: column-reverse;
         height: auto;
         padding-top: 90px;
-        overflow: visible;
     }
 
     .text_block {
