--- a/src/styles/mainpage.module.scss
+++ b/src/styles/mainpage.module.scss
@@ -1,3 +1,4 @@
 .container {
     background-color: #F7F7F7;
+    overflow: hidden;
 }
